# mpl-pe-pattern-monster

./: README.md  setup.cfg  setup.py
docs/: API.rst  Contributing.rst  conf.py  index.rst
examples/: README.rst  barplot_christmas.py  barplot_with_patterns.py  piechart_matplotlib.py
mpl_pe_pattern_monster/: pattern_monster.py  pattern_monster_vertcies_codes.npz  pattern_monster_wo_path.json
